# nairobi2

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh
.claude/skills/rust-slint-android-app/: SKILL.md
.github/scripts/: free-disk-space.sh
.github/workflows/: ci.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/nairobi/app/: LocationBridge.java  LocationService.java  MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
app/: Cargo.toml  build.rs
app/src/: controller.rs  glue.rs  lib.rs  main.rs  map.rs  platform.rs  sim.rs
app/ui/: app.slint
core/: Cargo.toml
core/src/: auction.rs  config.rs  engine.rs  error.rs  keys.rs  lib.rs  matching.rs  pool.rs  protocol.rs
core/src/burn/: electrum.rs  mod.rs  notary.rs  proof.rs  reputation.rs  service.rs  tx.rs  verify.rs  watch.rs
core/src/geo/: geohash.rs  http.rs  mod.rs  routing.rs  tiles.rs
core/src/wallet/: lnaddress.rs  mod.rs
docker/: Dockerfile
docs/: RELEASING.md  proof-of-burn-api.md
docs/superpowers/specs/: 2026-06-17-nairobi2-ridesharing-design.md  2026-06-18-proof-of-burn-antisybil-design.md
scripts/: build-apk.sh  gen-release-keystore.sh
wallet-fedimint/: Cargo.toml  README.md
wallet-fedimint/.cargo/: config.toml
wallet-fedimint/src/: backend.rs  lib.rs  stub.rs
